--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.jia.awty" >
+    xmlns:uses-permissionandroid="http://schemas.android.com/apk/res-auto"
+    package="com.example.jia.awty">
 
     <application
         android:allowBackup="true"
@@ -16,6 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
+    <uses-permission android:name = "android.permission.SEND_SMS"/>
 
 </manifest>
